Terraform/modules/vpc/igw.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.vpc.id

    tags = merge(local.common_tags, {
        Name = "${local.name}-igw"
    })
}
